--- a/website/src/styles/App.less
+++ b/website/src/styles/App.less
@@ -50,7 +50,9 @@ hr {
 .ant-layout-content {
     background-color: @page-background !important;
     z-index: 2;
-
+    .content:nth-child(1) {
+        padding-top: 50px !important;
+    }
     a {
         color: @primary-link-color;
         text-decoration: underline;
