--- a/website/src/styles/variables.less
+++ b/website/src/styles/variables.less
@@ -18,8 +18,8 @@
 @page-background: @site-background;
 
 @header-background: @site-background;
-@header-menu-color: #737380;
-@header-menu-color-hover: darken(@primary-color, 25%);
+@header-menu-color: #ffffff;
+@header-menu-color-hover: @primary-color;
 @header-line-height-fix: 0;
 @header-line-height: @header-size;
 @header-size-mobile: @header-size;
@@ -28,7 +28,7 @@
 @header-desktop-width: 1200px;
 
 @font-heading: 44px;
-@font-subparagraph: 22px;
+@font-subparagraph: 16px;
 @font-paragraph: 17px;
 
 @font-gray: #e1e1e6;
