--- a/website/src/base/Header/index.less
+++ b/website/src/base/Header/index.less
@@ -1,7 +1,7 @@
 @import "../../styles/variables.less";
 
 .ant-layout-header {
-    padding: 0 calc((100% - @header-desktop-width) / 2);
+    padding: 0 calc((100% - @header-desktop-width) / 2) !important;
     position: fixed;
     display: flex;
     justify-content: center;
@@ -12,8 +12,9 @@
     height: @header-size !important;
     line-height: @header-size !important;
     background: #010119!important;
-    padding: 20px;
-
+    transition: all .3s ease-out;
+    box-shadow: inset 0 -1px 0 #29292e;
+   
     @media (max-width: @header-mobile-width) {
       padding: 0 20px !important;
       height: @header-size-mobile !important;
@@ -21,9 +22,10 @@
     }
 
     &__wrapper{
-      width: 100%;
-      max-width: @site-max-width;
+      width: 90%;
+      margin: 0 auto;
       display: flex;
+
     }
 
     >*:not(.menu-burger-open) {
@@ -133,7 +135,6 @@
 
 
             @media screen and (max-width: @header-mobile-width) {
-                margin-right: 25px !important;
                 margin-left: auto !important;
             }
         }
