--- a/website/src/components/Listing/index.less
+++ b/website/src/components/Listing/index.less
@@ -2,24 +2,21 @@
 
 .listing {
     margin: 0 auto;
-    width: 100%;
+    width: 90%;
     max-width: 100%;
-    padding: 50px 60px 0;
+    padding: 0 calc((100% - @header-desktop-width) / 2) 0;
     display: flex;
-    flex-direction: column !important;
     padding-bottom: 50px;
     //background-color: #010119 !important;
 
     > div {
         margin: 0 auto;
         width: 100%;
-        padding-right: 70px;
-        padding-left: 70px;
     }
 
     @media only screen and (max-width: 800px) {
-        padding: 20px 0;
-        margin: 20px auto;
+        padding: 0 0 25px;
+        margin: 0 auto 25px;
         flex-wrap: wrap;
     }
 
@@ -51,8 +48,8 @@
     }
   
     > div > ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
+        margin: 0 auto;
+        width: 100%;
+        list-style: none;
     }
 }
