adição de imagens english

--- a/website/src/base/Cookies/index.less
+++ b/website/src/base/Cookies/index.less
@@ -18,10 +18,12 @@
             }
             display: flex;
             justify-content: space-between;
+            flex-wrap: wrap;
             p {
                 margin-bottom: 0;
+                margin: auto;
             }
-            @media only screen and (max-width: 768px) {
+            @media only screen and (max-width: 1270px) {
                 display: block;
                 p {
                     margin-bottom: 1em;
