--- a/website/src/components/Banner/index.less
+++ b/website/src/components/Banner/index.less
@@ -213,7 +213,7 @@
                     }
                     > div {
                         > p {
-                            font-size: 1.4em;
+                            font-size: 16px;
                             color: #fff;
                             @media only screen and (max-width: @header-mobile-width) {
                                 font-size: 1.5em;
