--- a/website/src/components/Banner/index.less
+++ b/website/src/components/Banner/index.less
@@ -216,7 +216,7 @@
                             font-size: 16px;
                             color: #fff;
                             @media only screen and (max-width: @header-mobile-width) {
-                                font-size: 1.5em;
+                                font-size: 16px;
                                 line-height: 1.5em;
                             }
                         }
