--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -26,7 +26,6 @@
             border: 1.5px solid #29292e;
             flex-direction: row !important;
             height: auto;
-            min-width: 320px;
 
             
             /*&::before {
@@ -192,7 +191,7 @@
             flex-direction: column !important;
             margin: 0 auto;
             overflow: hidden;
-
+            padding: 0 20px;
             .listing__image {
                 display: block;
                 margin-left: auto;
@@ -218,7 +217,7 @@
             width: 100%; 
             
             @media only screen and (max-width: @header-mobile-width) {
-             width: 350px !important; 
+             max-width: 350px !important; 
             }
            
         }
