--- a/website/src/components/Content/index.less
+++ b/website/src/components/Content/index.less
@@ -481,6 +481,11 @@
         position: relative;
         padding: 32px 16px;
         width: 500px;
+        .ant-col-12 {
+            @media only screen and (max-width: 390px) {
+                width: 400px;
+            }
+        }
 
         @media only screen and (max-width: @header-mobile-width) { 
             flex-direction: column !important;
