--- a/website/src/base/Cookies/index.less
+++ b/website/src/base/Cookies/index.less
@@ -8,7 +8,7 @@
         width: 100%;
         height: auto;
         bottom: 0;
-        background-color: #fff;
+        background-color: #010119!important;
         box-shadow: 0 -1px 10px 0 rgba(172, 171, 171, 0.3);
         &__content {
             width: 90%;
