--- a/website/src/base/Cookies/index.less
+++ b/website/src/base/Cookies/index.less
@@ -1,3 +1,5 @@
+@import "../../styles/variables.less";
+
 .cookies {
     position: absolute;
     height: 100px;
@@ -22,6 +24,7 @@
                 display: block;
                 p {
                     margin-bottom: 1em;
+                    color: @header-menu-color;
                 }
         }
     }
