--- a/website/src/components/Banner/index.less
+++ b/website/src/components/Banner/index.less
@@ -118,6 +118,7 @@
                 max-width: 720px!important;
                 display: inline-block!important;
                 font-weight: 700!important;
+                margin-bottom: 15px !important;
             }
             > div {
                 p {
