--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -213,11 +213,12 @@
             border: 1.5px solid #29292e;
             border-radius: 4px;
             flex-direction: row !important;
-            height: 100%;
+            height: 500px;
             width: 100%; 
             
             @media only screen and (max-width: @header-mobile-width) {
              max-width: 350px !important; 
+             height: auto;
             }
            
         }
@@ -244,6 +245,15 @@
             color: @font-gray;
 
         }
+        a {
+            position: relative;
+            text-decoration: none !important;
+        }
+
+        a:hover {
+            box-shadow: 0 -1px 15px 0 rgba(172, 171, 171, 0.3);
+            top: -4px;
+        }
 
         .listing__image {
             display: block;
@@ -259,6 +269,7 @@
             margin-right: 0px;
             margin-left: 0px;
             object-fit: cover;
+            height: 300px;
         }
     }
 
