--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -251,7 +251,7 @@
         }
 
         a:hover {
-            box-shadow: 0 -1px 15px 0 rgba(172, 171, 171, 0.3);
+            box-shadow: 0 -1px 45px rgba(172, 171, 171, 0.3);
             top: -4px;
         }
 
