--- a/website/src/components/Content/index.less
+++ b/website/src/components/Content/index.less
@@ -304,8 +304,6 @@
         .text {
             text-align: center !important;
             margin: 0 auto;
-            padding-bottom: 25px;
-
             h1 {
                 font-size: @font-heading;
                 line-height: 60px;
@@ -366,6 +364,56 @@
                     text-align: center !important;
                     font-weight: 700;
                 }
+            }
+            ul {
+                width: 100% !important;
+                margin: 0 auto;
+                display: flex;
+                justify-content: center;
+                padding: 0 !important;
+            }
+            
+            .actions__item {
+                margin-top: 13px !important;
+                max-width: 240px;
+                height: 64px;
+                padding: 20px;
+                margin: 0 auto;
+
+                    @media only screen and (max-width: @header-mobile-width) {
+                        margin: 0 auto !important;
+                        margin-top: 15px !important;
+
+
+                        a {
+                            font-size: 17px !important;
+                        }
+                    }
+
+                    border: 1.5px;
+                    border-style: solid;
+                    border-radius: 5px;
+                    transition: all .1s ease-in;
+                    border-color: #29292e;
+                    background: #121214;
+                &:hover {
+                    cursor: pointer;
+                    background-color: @actions-item-background-hover;
+                    color: @actions-item-text-color-hover;
+                }
+                a {
+                    color: #fff; 
+                    font-size: 22px;
+                    line-height: 19px;
+                    text-transform: uppercase;
+                    text-align: center !important;
+                    font-weight: 700;
+                    text-decoration: none;
+                }
+                h4 {
+                    display: none;
+                }
+
             }
          
          
@@ -601,6 +649,14 @@
                 word-break: break-all;
             }
 
+            ul {
+                width: 100% !important;
+                margin: 0 auto;
+                display: flex;
+                justify-content: start;
+                padding: 0 !important;
+            }
+
             .ant-btn {
                 max-width: 240px;
                 height: 64px;
@@ -611,6 +667,7 @@
             
                     @media only screen and (max-width: @header-mobile-width) {
                         margin: 0 auto !important;
+                        display: flex;
 
                         span {
                             font-size: 17px !important;
@@ -639,22 +696,51 @@
                     font-weight: 700;
                 }
             }
+            .actions__item {
+                max-width: 240px;
+                height: 64px;
+                font-size: 16px !important;
+                line-height: 19px;
+                padding: 20px;
+                margin: 0 auto !important;
+                text-align: center;
+                
+                @media only screen and (max-width: @header-mobile-width) {
+                    margin: 0 auto !important;
+                    display: flex;
+
+                    a {
+                        font-size: 17px !important;
+                    }
+                }
+
+                border: 1.5px;
+                border-style: solid;
+                border-radius: 5px;
+                transition: all .1s ease-in;
+                border-color: #29292e;
+                background: #121214;
+                &:hover {
+                    cursor: pointer;
+                    background-color: @actions-item-background-hover;
+                    color: @actions-item-text-color-hover;
+                }
+                a {
+                    color: #fff;
+                    font-size: 22px;
+                    text-transform: uppercase;
+                    
+                    font-weight: 700;
+                    text-decoration: none;
+                }
+                h4 {
+                    display: none;
+                }
+
+            }
         }
         
     }
 
-    .actions__item {
-        background-color: #282828;
-        text-align: center;
-        border-radius: 4px;
-        outline: 0;
-        
-        h4 {
-            color: #ffffff;
-        }
-        a {
-            color: @secondary-color;
-            font-weight: 400 !important;
-        }
-    }
+
 }
