style footer and whatsapp contact

--- a/website/src/base/Footer/index.less
+++ b/website/src/base/Footer/index.less
@@ -14,7 +14,7 @@
     .ant-row {
       display: flex;
       justify-content: end;
-      @media only screen and (max-width: @header-mobile-width) {
+      @media only screen and (max-width: 1000px) {
         justify-content: center;
       }
     }
@@ -32,7 +32,7 @@
         width: fit-content;
         margin-bottom: 12px;
         font-size: 20px;
-        @media only screen and (max-width: @header-mobile-width) {
+        @media only screen and (max-width: 1000px) {
           justify-content: center;
           width: unset !important;
         }
@@ -143,7 +143,7 @@
         gap: 15px;
         place-items: center;
         align-items: center;
-        @media only screen and (max-width: @header-mobile-width) {
+        @media only screen and (max-width: 1000px) {
           display: flex;
           justify-content: center;
         }
