--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -361,6 +361,7 @@
                 color: #c1c1c1;
                 font-weight: 400;
                 margin: 0;
+                line-height: 32px;
             }
             
             ul {
@@ -372,6 +373,7 @@
                 color: #c1c1c1;
                 font-weight: 400;
                 margin: 0;
+                line-height: 32px;
             }
             li::before 
             {
