page dev and image astronaut

--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -602,6 +602,17 @@
             }
         }
 
+        .grid-container:nth-child(8){
+            .grid-image {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                    height: 300px;
+                    width: 300px !important;
+                }
+            }
+        }
         .grid-container:nth-child(odd) {
 
             .grid-text {
