--- a/website/src/components/Listing/index.less
+++ b/website/src/components/Listing/index.less
@@ -1,23 +1,51 @@
 @import "../../styles/variables.less";
 
 .listing {
-    margin: 0 auto;
-    width: 90%;
-    max-width: 100%;
-    padding: 0 calc((100% - @header-desktop-width) / 2) 0;
-    display: flex;
-    padding-bottom: 50px;
-    //background-color: #010119 !important;
+    position: relative;
+        //background-color: #010119 !important;
 
-    > div {
-        margin: 0 auto;
-        width: 100%;
+    &__tab-list {
+        padding: 124px 0;
+        position: relative;
+
+        &:nth-last-child(2) {
+            padding-bottom: 0;
+        }
+
+        // .listing-background {
+        //     position: absolute;
+        //     inset: 0;
+        //     width: 100%;
+        //     height: 100%;
+        //     padding-bottom: 4vw;
+        //     background-color: #fff;
+        //     transform: rotate(3.55deg);
+        //     transform-origin: top right;
+        // }
+
+        // &::after {
+        //     content: '';
+        //     position: absolute;
+        //     width: 100%;
+        //     bottom: -50px;
+        //     padding-bottom: 4vw;
+        //     background-color: #fff;
+        //     transform: rotate(3.55deg);
+        //     transform-origin: top right;
+        //     z-index: 40;
+        // }
     }
 
-    @media only screen and (max-width: 800px) {
-        padding: 0 0 25px;
-        margin: 0 auto 25px;
-        flex-wrap: wrap;
+    &__operation-netuno {
+        background: #010119 !important;
+        padding: 120px 0;
+        
+        h1 {
+            font-size: @font-heading;
+            text-align: center;
+            color: #fff;
+            font-weight: 700;
+        }
     }
 
     .text__title-border {
@@ -30,26 +58,5 @@
         height: 80px;
         background: linear-gradient(180deg,#1178FF ,rgba(153,109,255,0));
         margin: 0 auto;
-    }
-    
-    > div > h1 {
-        text-align: center !important;
-        margin: 0 auto !important;
-        padding-bottom: 25px;
-        color: @font-color-primary;
-        font-size: @font-heading;
-        line-height: 60px;
-        font-weight: 700!important;
-
-        @media only screen and (max-width: 800px) {
-            font-size: 30px !important;
-            padding-bottom: 0px !important;
-        }
-    }
-  
-    > div > ul {
-        margin: 0 auto;
-        width: 100%;
-        list-style: none;
     }
 }
