--- a/website/src/styles/variables.less
+++ b/website/src/styles/variables.less
@@ -26,7 +26,7 @@
 @header-mobile-width: 1100px;
 @header-desktop-width: 1600px;
 
-@font-heading: 44px;
+@font-heading: 3rem;
 @font-subparagraph: 16px;
 @font-paragraph: 17px;
 
