--- a/website/src/components/Content/index.less
+++ b/website/src/components/Content/index.less
@@ -558,142 +558,44 @@
         justify-content: space-between !important;
         -moz-box-align: center;
         align-items: center;
-        justify-content: center !important;
         position: relative;
-        padding: 32px 16px;
-        width: 500px;
-        .ant-col-12 {
-            @media only screen and (max-width: 390px) {
-                width: 400px;
-            }
-        }
+        padding: 48px 32px;
+        margin-top: -120px;
 
-        @media only screen and (max-width: @header-mobile-width) { 
-            flex-direction: column !important;
-            display: flex;
-            width: 100% !important;
-            justify-content: flex-start;
-            padding: 25px !important;
-            margin: 0 auto;
-            justify-content: center;
-            -moz-box-align: center;
-
-
-            > div {
-                flex-direction: column;
-            }
-
-            .ant-col-12 {
-                text-align: center;
-            }
-
-
-        }
-
-        .container-img {
-            width: 250px;
-            margin-left: auto;
-            margin-right: auto;
-
-            @media only screen and (max-width: @header-mobile-width) {
-                width: 150px !important;
-            }
-
-            > div {
-                display: inline-block;
-                max-width: 100%;
-                overflow: hidden;
-                position: relative;
-                box-sizing: border-box;
-                margin: 0;
-            }
-
-            > div > div {
-                box-sizing: border-box;
-                display: block;
-                max-width: 100%;
-            }
-
+        &-image {
+            height: 400px;
             img {
-                max-width: 100%;
-                display: block;
-                margin: 0;
-                border: none;
-                padding: 0;
-            }
-        }
-
-        .styles-logo {
-            display: inline-block;
-            max-width: 100%;
-            position: relative;
-            box-sizing: border-box;
-            margin: 0;
-            width: 156px;
-            margin-bottom: 24px;
-            margin-left: 25px;
-
-            img {
-                max-width: 100%;
-                display: block;
-                margin: 0;
-                border: none;
-                padding: 0;
+                width: 100%;
+                height: 100%;
                 object-fit: cover;
             }
+
         }
 
         .container-text {
             word-break: break-word;
             margin-left: 25px;
 
-            @media only screen and (max-width: @header-mobile-width) {
-                max-width: 100% !important;
-                text-align: left !important;
-                margin-left: auto;
-                width: 560px !important;
-
-                h1 {
-                    margin-left: 3px;
-                }
-
-            }
-            
-            > div {
-                text-align: left !important;
-            }
-        
             h1 {
-                font-size: 32px;
-                line-height: 36px;
-                margin-bottom: 22px;
-                max-width: 378px;
+                font-size: @font-heading;
+                font-weight: 700;
+                color: #fff;
             }
 
             p {
-                line-height: 26px;
-                color: #fff;
+                font-size: 1rem;
+                color: rgb(156 163 175);
                 font-weight: 400;
                 padding: 0 !important;
-                margin-bottom: 24px !important;
                 word-break: break-word;
             }
 
-            ul {
-                width: 100% !important;
-                margin: 0 auto;
-                display: flex;
-                justify-content: start;
-                padding: 0 !important;
-            }
-
             .ant-btn {
-                max-width: 240px;
-                height: 64px;
+                display: flex;
+                justify-content: flex-start;
+                align-items: center;
                 font-size: 16px;
-                line-height: 19px;
-                padding: 20px;
-                margin: 0 auto !important;
+                padding: 24px;
             
                     @media only screen and (max-width: @header-mobile-width) {
                         margin: 0 auto !important;
@@ -720,53 +622,11 @@
                 }
                 span {
                     color: #fff;
-                    font-size: 22px;
+                    font-size: 16px;
                     text-transform: uppercase;
                     text-align: center !important;
                     font-weight: 700;
                 }
-            }
-            .actions__item {
-                max-width: 240px;
-                height: 64px;
-                font-size: 16px !important;
-                line-height: 19px;
-                padding: 20px;
-                margin: 0 auto !important;
-                text-align: center;
-                
-                @media only screen and (max-width: @header-mobile-width) {
-                    margin: 0 auto !important;
-                    display: flex;
-
-                    a {
-                        font-size: 17px !important;
-                    }
-                }
-
-                border: 1.5px;
-                border-style: solid;
-                border-radius: 5px;
-                transition: all .1s ease-in;
-                border-color: #29292e;
-                background: #121214;
-                &:hover {
-                    cursor: pointer;
-                    background-color: @actions-item-background-hover;
-                    color: @actions-item-text-color-hover;
-                }
-                a {
-                    color: #fff;
-                    font-size: 22px;
-                    text-transform: uppercase;
-                    
-                    font-weight: 700;
-                    text-decoration: none;
-                }
-                h4 {
-                    display: none;
-                }
-
             }
         }
         
