--- a/website/src/styles/App.less
+++ b/website/src/styles/App.less
@@ -65,3 +65,14 @@ hr {
         }
     }
 }
+
+.container {
+    max-width: 1344px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+}
+
+  
