--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -221,6 +221,8 @@
         margin: 0 auto;
         grid-gap: 5rem;
         z-index: 0;
+        width: 80%;
+        padding-bottom: 128px !important;
 
         @media only screen and (max-width: @header-mobile-width) {
             display: flex;
