--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -279,6 +279,7 @@
             text-decoration: none !important;
             display: block;
             width: 100%;
+            list-style: none;
             &:hover {
               box-shadow: 0 -1px 45px rgba(172, 171, 171, 0.3);
             }
