removing spacing between items

--- a/website/src/components/Listing/Item/index.less
+++ b/website/src/components/Listing/Item/index.less
@@ -303,7 +303,7 @@
     }
 
     &__support-listing{
-        width: unset;
+        max-width: 1344px;
         position: relative;
         margin: 0 auto;
         box-sizing: border-box;
